# rentikpro-app

./: .env.example  .env.local  .gitignore  App.tsx  PUBLISH.md  README.md  README_INTEGRATION.md  README_USER_GUIDE.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tauri-updater-template.json  tauri.conf.json  tsc_output.txt  tsconfig.json  tsconfig.typecheck.json  types.ts  updater-keys.key  updater-keys.key.pub  verify_dedupe.ts  vite.config.ts  vitest.config.ts  worker_ical_export.ts
_ops/: publish_one_property.mjs  republish_ical_feeds.mjs
components/: AutoUpdater.tsx  BookingEnrichmentList.tsx  BookingSummary.tsx  CampaignContentModal.tsx  ChannelDetailsModal.tsx  CleaningTaskDetail.tsx  CreateBookingModal.tsx  DebugOverlay.tsx  DemoBanner.tsx  DirectPaymentList.tsx  EmailTemplateEditor.tsx  EmailTemplatePreview.tsx  ErrorBoundary.tsx  HoldTimerBanner.tsx  ICalDebugPanel.tsx  IntegrationModal.tsx  Layout.tsx  MaintenanceIssueDetail.tsx  ManualPublishModal.tsx  PendingDetailsList.tsx  PolicyEditor.tsx  ProjectSwitcherModal.tsx  PromptBuilder.tsx  ProvisionalDetailModal.tsx  PulseCompletionModal.tsx  QuickWebWizard.tsx  UpdateButton.tsx  VersionChecker.tsx
docs/: PUBLISH_GUIDE.md  macos-signing-notarization.md  nightly-report.md
hooks/: useStore.ts
landing/: index.html
pages/: Accounting.tsx  BackupVault.tsx  Bookings.tsx  Calendar.tsx  ChannelManager.tsx  CheckInScan.tsx  Cleaning.tsx  Communications.tsx  Dashboard.tsx  Diagnostics.tsx  EmailBookings.tsx  Importers.tsx  Maintenance.tsx  Marketing.tsx  PromptBuilder.tsx  PromptBuilderPage.tsx  Properties.tsx  QualityAssurance.tsx  Registry.tsx  RescueMode.tsx  Settings.tsx  StartupScreen.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  default.json.save
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+544 files in other folders)
