[package]
name = "rentikpro"
version = "0.1.0"
description = "RentikPro desktop wrapper"
authors = ["RentikPro"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
