[package]
name = "rentikpro"
version = "0.1.0"
description = "RentikPro desktop wrapper"
authors = ["RentikPro"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rfd = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
